# FeishuClaude

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
AGENT/: ROADMAP.md  codex-feishu-scope-command-mapping.md  enhancement-proposals.md  phase0-baseline.md  phase0-pytest.txt  phase1-codex-runner.md  phase1-pytest.txt  phase2-pytest.txt  phase2-session-modes.md  phase3-observability.md  phase4-pytest.txt  phase4-safety-policy.md  phase5-guardrails.md  phase5-pytest.txt  phase6-acceptance-report.md  phase6-pytest.txt  phase6-rollout-runbook.md
memory/: MEMORY.md
src/feishu_claude/: __init__.py  bot.py  claude_runner.py  cli.py  codex_runner.py  config.py  feishu_adapter.py  policy.py  runtime_state.py  safety.py
tests/: __init__.py  test_bot.py  test_claude_runner.py  test_codex_runner.py  test_config.py  test_e2e_backend_switch.py  test_e2e_baseline.py  test_e2e_guardrails.py  test_e2e_observability.py  test_e2e_safety_policy.py  test_feishu_adapter.py  test_policy.py  test_safety.py
